@@ -5,4 +5,5 @@ COPY ./build/libs/backend-0.0.1-SNAPSHOT.jar ./app.jar
 
 EXPOSE $PORT
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+#ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT java -Xverify:none -jar app.jar
